# vgc-champions-analyzer

./: .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-pipeline.txt  requirements.txt  requirements_cloud.txt  streamlit_app.py
.github/workflows/: daily-ingest.yml  dbt-build.yml  detect-new-reg.yml  drift-check.yml  retrain-wp-weekly.yml  validate-regulations.yml
data/: pokemon_master.json
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/curated/: items_by_pkm.sql  moves_by_pkm.sql  teammates_by_pkm.sql  usage_by_reg.sql
regulations/: F.json  H.json  I.json  M-A.json  TEST-FUTURE.json  TEST-HIST.json
scripts/: create_reg_draft.py  fetch_pokemon_master.py  parse_replays.py  rehash.py  snapshot_meta.py
src/app/components/: sidebar.py
src/app/core/: champions_calc.py  checksum.py  curated_schemas.py  regulation_active.py  schema.py
src/app/metrics/: advanced_metrics.py  lre.py  mlwr.py  spdo.py
src/app/modules/: counter.py  drift.py  metrics.py  new_reg_detector.py  pmi.py  rating.py  validate.py  wp.py
src/app/pages/: 01_Meta_Overview.py  02_Team_Builder.py  03_Counter_Analyzer.py  04_Predictions.py  05_Analytics.py
tests/: test_auto_v1.py  test_champions_calc.py  test_clustering.py  test_counter_v1.py  test_drift.py  test_live_ingest.py  test_lre.py  test_meta_overview.py  test_metrics_mvp.py  test_mlwr.py  test_prior_ingest.py  test_regulation_active.py  test_regulations_ci.py  test_schema.py  test_spdo.py  test_team_builder.py  test_wp.py
(+39 files in other folders)
