[project]
name = "vgc-champions-analyzer"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-xdist>=3.0,<4.0",
    "ruff>=0.4,<1.0",
    "black>=24.0,<25.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
    "pandera[mypy]>=0.20,<1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
